# kraxcli

./: .gitignore  README.md  krax.py  krax_cli.onedir.spec  kraxcli  kraxcli.onedir.spec  kraxcli.spec  project.py  pyproject.toml  requirements.txt  upydev.spec  upydev_.config
debian/: README  changelog  control  copyright  files  install  postinst  postrm
docs/source/: commands.rst  conf.py  device.rst  files.rst  index.rst  install.rst  project.rst  usage.rst
hooks/: hook-mpremote.py  hook-upydev.py  hook-upydevice.py
src/: krax.py  upydev_.config
src/krax_cli/: __main__.py  cli.py
src/kraxcli/: __init__.py  __main__.py  _upydev.py  connect.py  device.py  files.py  project.py  tools.py
