[project]
name = "krax-cli"
version = "0.1.0"
description = "Wrapper for pyserial-ports/mpremote/upydev"
authors = [
  {name="Василий", email="vlinnik@mail.ru"}
]
dependencies = ["colorlog","telnetlib3","upydev","pyserial","mpremote","argparse"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
krax_cli = "krax_cli.__main__:main"
