[project]
name = "kraxcli"
version = "0.2"
description = "Wrapper for pyserial-ports/mpremote/upydev"
authors = [
  {name="Василий", email="vlinnik@mail.ru"}
]
dependencies = ["colorlog","telnetlib3","upydev","pyserial","mpremote","argparse"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
kraxcli = "kraxcli.__main__:main"
